update special IO

--- a/docs/wrapper/SpecialIO.ipynb
+++ b/docs/wrapper/SpecialIO.ipynb
@@ -32,22 +32,184 @@
    "execution_count": 2,
    "id": "8b62a6ee-6e07-4907-b7cc-cc23d021b4e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.543405</td>\n",
+       "      <td>0.004719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.278369</td>\n",
+       "      <td>0.121569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.424518</td>\n",
+       "      <td>0.670749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.844776</td>\n",
+       "      <td>0.825853</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y\n",
+       "0  0.543405  0.004719\n",
+       "1  0.278369  0.121569\n",
+       "2  0.424518  0.670749\n",
+       "3  0.844776  0.825853"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "np.random.seed(100)\n",
     "\n",
     "# first\n",
     "df = pd.DataFrame({'x': np.random.random((4, )),\n",
     "                   'y': np.random.random((4, ))})\n",
     "csv_filename1 = h5tbx.utils.generate_temporary_filename(suffix='.csv')\n",
     "df.to_csv(csv_filename1, index=None)\n",
-    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "180c998d-28b0-4759-8924-d91d7073c38a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.136707</td>\n",
+       "      <td>0.811683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.575093</td>\n",
+       "      <td>0.171941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.891322</td>\n",
+       "      <td>0.816225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.209202</td>\n",
+       "      <td>0.274074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.185328</td>\n",
+       "      <td>0.431704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.108377</td>\n",
+       "      <td>0.940030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.219697</td>\n",
+       "      <td>0.817649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.978624</td>\n",
+       "      <td>0.336112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y\n",
+       "0  0.136707  0.811683\n",
+       "1  0.575093  0.171941\n",
+       "2  0.891322  0.816225\n",
+       "3  0.209202  0.274074\n",
+       "4  0.185328  0.431704\n",
+       "5  0.108377  0.940030\n",
+       "6  0.219697  0.817649\n",
+       "7  0.978624  0.336112"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# second\n",
     "df = pd.DataFrame({'x': np.random.random((8, )),\n",
     "                   'y': np.random.random((8, ))})\n",
     "csv_filename2 = h5tbx.utils.generate_temporary_filename(suffix='.csv')\n",
-    "df.to_csv(csv_filename2, index=None)"
+    "df.to_csv(csv_filename2, index=None)\n",
+    "df"
    ]
   },
   {
@@ -60,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "525c2150-6fb7-48b0-9e78-4fdcad50578a",
    "metadata": {},
    "outputs": [
@@ -270,25 +432,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4818690600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4818690600\">\n",
+       "                        <input id=\"group-ds--4923108500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4923108500\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a5</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4820146500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4820148900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4820148900\">x</label>\n",
+       "                <ul id=\"ds-1-/x-4925291300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4925294100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4925294100\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4820307700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4820309900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4820309900\">y</label>\n",
+       "                <ul id=\"ds-1-/y-4925567400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-4925569900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-4925569900\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -329,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d8465a39-d70e-4bad-b265-0b5453c027f8",
    "metadata": {},
    "outputs": [
@@ -539,25 +701,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4851335700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4851335700\">\n",
+       "                        <input id=\"group-ds--4974389800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4974389800\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a5</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4852254300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4852256600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4852256600\">x</label>\n",
+       "                <ul id=\"ds-1-/x-4975321000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4975324100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4975324100\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4852394600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4852396800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4852396800\">y</label>\n",
+       "                <ul id=\"ds-1-/y-4975527100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-4975529400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-4975529400\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -590,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ff0942b5-dc0e-45b7-927e-72a7f62a4b41",
    "metadata": {},
    "outputs": [
@@ -800,25 +962,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4881525900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4881525900\">\n",
+       "                        <input id=\"group-ds--5024837000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5024837000\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a5</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4882359100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4882361300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4882361300\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5025700000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5025702500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5025702500\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4882524700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4882526900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4882526900\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5025891800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5025893900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5025893900\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -852,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "de901e0e-fa8e-45a1-a992-bd61be3c29b4",
    "metadata": {},
    "outputs": [
@@ -1062,17 +1224,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4911561900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4911561900\">\n",
+       "                        <input id=\"group-ds--5066290500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5066290500\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a5</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-4912439100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-4912441700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4912441700\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5067145900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5067149000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5067149000\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1106,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5db487b5-e2a7-4bdb-a05e-4a5205bc9220",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8f39eea2-5000-47aa-89ae-4bf3ad35b834",
    "metadata": {},
    "outputs": [
@@ -1347,17 +1509,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4991688800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4991688800\">\n",
+       "                        <input id=\"group-ds--5174672100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5174672100\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a5</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-4992264400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-4992266800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4992266800\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5175283900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5175286200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5175286200\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
