updating doc and cf conventions
mainly housekeeping tasks

--- a/docs/wrapper/wrapper_and_conventions/cflike.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/cflike.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# CF-like\n",
     "\n",
-    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `cflike`. More details used naming within the convention can also be found [here](../../conventions/conventions.ipynb)\n",
+    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `cflike`. More details used naming within the convention can also be found [here](../../conventions/cflike.ipynb)\n",
     "\n",
     "The convention can be switched durng runtime. The default convention (means using no convention) is `default`, to switch to the CF-like call `use('cflike')`:\n",
     "\n",
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
